syntax = "proto3";
package sonrhq.sonr.identity;

import "gogoproto/gogo.proto";
import "sonr/identity/params.proto";
import "sonr/identity/did.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/sonr-hq/sonr/x/identity/types";

// GenesisState defines the identity module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated DidDocument didDocumentList = 2 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
