syntax = "proto3";
package sonrhq.sonr.identity;

import "gogoproto/gogo.proto";

option go_package = "github.com/sonr-hq/sonr/x/identity/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;
  string did_base_context = 1;
  string did_method_context = 2;
  string did_method_name = 3;
  string did_method_version = 4;
  string did_network = 5;
  string ipfs_gateway = 6;
  string ipfs_api = 7;
  repeated string hns_tlds = 8;
}
